add init task5 v24

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ task6_version24/.vs/
 task6_version24/task6_version24/task6_version24.vcxproj
 task6_version24/task6_version24/task6_version24.vcxproj.user
 task6_version24/task6_version24/task6_version24.vcxproj.filters
+task5_version24/task5_version24/task5_version24.vcxproj.user
+task5_version24/task5_version24/task5_version24.vcxproj.filters
+task5_version24/task5_version24/task5_version24.vcxproj
+task5_version24/.vs/
+task5_version24/task5_version24/Debug/
+task5_version24/Debug/
